* The block allocator now uses block_cache_discard() to make sure the file   and the block cache don't interfere when working on the same blocks. * This has fixed all kinds of file corruptions I could reproduce before,   therefore likely also bug #3010.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28517 a95241bf-73f2-0310-859d-f6bbb57e9c96